--- a/Git.Storage.Web/Views/Home/Index.cshtml
+++ b/Git.Storage.Web/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
                 </form>
 
             </div>
-            <div class="footer"><a>技术支持QQ群:142050808</a></div>
+            <div class="footer"><a>@Html.Raw(ViewBag.LoginSign)</a></div>
         </div>
     </div>
     <input type="hidden" id="hdUrl" value="@ViewBag.ReferrerUrl" />
